// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummery correctly with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     expenses totalling 
    $1.95
  </p>
</div>
`;

exports[`should render ExpenseSummery correctly with 2 expenses 1`] = `
<div>
  <p>
    Viewing 
    2
     expenses totalling 
    $1,096.95
  </p>
</div>
`;
